[gd_scene format=3 uid="uid://dm0xy6rtb31vm"]

[ext_resource type="Script" uid="uid://6yddaf01cfsr" path="res://Scripts/player.gd" id="1_b0kkn"]
[ext_resource type="Texture2D" uid="uid://bd5c7itdkixp1" path="res://Assets/Penguino/Idle (16 x 16).png" id="2_b0kkn"]
[ext_resource type="Texture2D" uid="uid://daweevnc05vhu" path="res://Assets/Penguino/Hurt (16 x 16).png" id="2_ef06p"]
[ext_resource type="Texture2D" uid="uid://ntqb4n8r0lmb" path="res://Assets/Penguino/Ducking (16 x 16).png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://b887yufbjexpf" path="res://Assets/Penguino/Falling (16 x 16).png" id="3_qsoyl"]
[ext_resource type="Texture2D" uid="uid://b07quxicwyjvy" path="res://Assets/Penguino/Jump (16 x 16).png" id="3_rfe5m"]
[ext_resource type="Texture2D" uid="uid://de468yg32rv4b" path="res://Assets/Penguino/Lying_On_Ground (16 x 16).png" id="3_tjdhl"]
[ext_resource type="Texture2D" uid="uid://ps8icnk8b77w" path="res://Assets/Penguino/Waddling (16 x 16).png" id="4_qly61"]
[ext_resource type="Texture2D" uid="uid://bir0xmm164hml" path="res://Assets/Penguino/Belly_Sliding (16 x 16).png" id="6_6nm46"]
[ext_resource type="Texture2D" uid="uid://b8op6jlb2t8p2" path="res://Assets/Penguino/Swimming (16 x 16).png" id="9_x08pd"]
[ext_resource type="Texture2D" uid="uid://c6upk0qfwlsq0" path="res://Assets/Penguino/Looking_Off (16 x 16).png" id="10_mat3c"]
[ext_resource type="Texture2D" uid="uid://bqi2qkkrtt5ow" path="res://Assets/Penguino/Wall_Slide (16x16).png" id="10_tjdhl"]
[ext_resource type="AudioStream" uid="uid://b13o2xsypkqt7" path="res://Sounds/jump.wav" id="12_eyssl"]
[ext_resource type="AudioStream" uid="uid://c6khnlsbgv70a" path="res://Sounds/hit.mp3" id="14_25cb4"]
[ext_resource type="AudioStream" uid="uid://drbquj6u27x17" path="res://Sounds/hurt.wav" id="14_uck12"]
[ext_resource type="AudioStream" uid="uid://fbjht3ord34o" path="res://Sounds/swim.wav" id="15_25cb4"]
[ext_resource type="AudioStream" uid="uid://dmqqra1251qjl" path="res://Sounds/enter_water.wav" id="16_uck12"]
[ext_resource type="AudioStream" uid="uid://dtf3403tfed7x" path="res://Sounds/coin_spawn.wav" id="17_uck12"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("3_rfe5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("6_6nm46")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("6_6nm46")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("6_6nm46")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("9_x08pd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("9_x08pd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("9_x08pd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("9_x08pd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffc7a"]
atlas = ExtResource("10_mat3c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("4_qly61")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("4_qly61")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("4_qly61")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("4_qly61")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("4_qly61")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("4_qly61")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("10_tjdhl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("10_tjdhl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("10_tjdhl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("10_tjdhl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i623q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ef06p")
}, {
"duration": 1.0,
"texture": ExtResource("3_tjdhl")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": true,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qsoyl")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffc7a")
}],
"loop": false,
"name": &"turn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}],
"loop": true,
"name": &"wall",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x08pd"]
radius = 6.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xakct"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k47j4"]
size = Vector2(10, 2)

[node name="Player" type="CharacterBody2D" unique_id=976081242 groups=["player_body"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_b0kkn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=964873476 groups=["player_body"]]
position = Vector2(0, 0.2)
sprite_frames = SubResource("SpriteFrames_i623q")
animation = &"turn"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=51162149]
visible = false
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_x08pd")

[node name="LeftWallDetector" type="RayCast2D" parent="." unique_id=483422272]
target_position = Vector2(-7, 0)
collision_mask = 5

[node name="RightWallDetector" type="RayCast2D" parent="." unique_id=417649668]
target_position = Vector2(7, 0)
collision_mask = 5

[node name="HitBoxes" type="Node2D" parent="." unique_id=792074376]

[node name="HurtBox" type="Area2D" parent="HitBoxes" unique_id=1255440571]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxes/HurtBox" unique_id=771148317]
position = Vector2(0, -0.0625)
shape = SubResource("RectangleShape2D_xakct")
debug_color = Color(1, 0.00028478965, 0.13669962, 0.41960785)

[node name="StompBox" type="Area2D" parent="HitBoxes" unique_id=1974912858]
collision_layer = 8
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxes/StompBox" unique_id=1733482048]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_k47j4")
debug_color = Color(0, 0.6394448, 0.36903545, 0.41960785)

[node name="Sounds" type="Node2D" parent="." unique_id=899791127]

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds" unique_id=1292766674]
stream = ExtResource("12_eyssl")
volume_db = -5.0
pitch_scale = 0.5

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds" unique_id=915023669]
stream = ExtResource("14_25cb4")
volume_db = -5.0

[node name="HurtSound" type="AudioStreamPlayer" parent="Sounds" unique_id=1591712525]
stream = ExtResource("14_uck12")
pitch_scale = 2.0

[node name="SwimSound" type="AudioStreamPlayer" parent="Sounds" unique_id=427512093]
stream = ExtResource("15_25cb4")

[node name="WaterSound" type="AudioStreamPlayer" parent="Sounds" unique_id=328533717]
stream = ExtResource("16_uck12")

[node name="CoinSpawnSound" type="AudioStreamPlayer" parent="Sounds" unique_id=1061387691]
stream = ExtResource("17_uck12")

[connection signal="area_entered" from="HitBoxes/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HitBoxes/StompBox" to="." method="_on_stomp_box_body_entered"]
[connection signal="body_exited" from="HitBoxes/StompBox" to="." method="_on_stomp_box_body_exited"]
