[gd_scene format=3 uid="uid://dm0xy6rtb31vm"]

[ext_resource type="Script" uid="uid://6yddaf01cfsr" path="res://Scripts/player.gd" id="1_b0kkn"]
[ext_resource type="Texture2D" uid="uid://bd5c7itdkixp1" path="res://Assets/Penguino/Idle (16 x 16).png" id="2_b0kkn"]
[ext_resource type="Texture2D" uid="uid://daweevnc05vhu" path="res://Assets/Penguino/Hurt (16 x 16).png" id="2_ef06p"]
[ext_resource type="Texture2D" uid="uid://ntqb4n8r0lmb" path="res://Assets/Penguino/Ducking (16 x 16).png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://b887yufbjexpf" path="res://Assets/Penguino/Falling (16 x 16).png" id="3_qsoyl"]
[ext_resource type="Texture2D" uid="uid://b07quxicwyjvy" path="res://Assets/Penguino/Jump (16 x 16).png" id="3_rfe5m"]
[ext_resource type="Texture2D" uid="uid://de468yg32rv4b" path="res://Assets/Penguino/Lying_On_Ground (16 x 16).png" id="3_tjdhl"]
[ext_resource type="Texture2D" uid="uid://ps8icnk8b77w" path="res://Assets/Penguino/Waddling (16 x 16).png" id="4_qly61"]
[ext_resource type="Texture2D" uid="uid://bir0xmm164hml" path="res://Assets/Penguino/Belly_Sliding (16 x 16).png" id="6_6nm46"]
[ext_resource type="Texture2D" uid="uid://b8op6jlb2t8p2" path="res://Assets/Penguino/Swimming (16 x 16).png" id="9_x08pd"]
[ext_resource type="Texture2D" uid="uid://bqi2qkkrtt5ow" path="res://Assets/Penguino/Wall_Slide (16x16).png" id="10_tjdhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("3_rfe5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("6_6nm46")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("6_6nm46")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("6_6nm46")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("9_x08pd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("9_x08pd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("9_x08pd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("9_x08pd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("4_qly61")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("4_qly61")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("4_qly61")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("4_qly61")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("4_qly61")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("4_qly61")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("10_tjdhl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("10_tjdhl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("10_tjdhl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("10_tjdhl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i623q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ef06p")
}, {
"duration": 1.0,
"texture": ExtResource("3_tjdhl")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": true,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qsoyl")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}],
"loop": true,
"name": &"wall",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x08pd"]
radius = 6.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nm46"]
size = Vector2(2, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x08pd"]
size = Vector2(2, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dchgp"]
size = Vector2(8, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdgjc"]
size = Vector2(10, 2)

[node name="Player" type="CharacterBody2D" unique_id=976081242 groups=["Player"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_b0kkn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=964873476]
position = Vector2(0, 0.2)
sprite_frames = SubResource("SpriteFrames_i623q")
animation = &"duck"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=51162149]
visible = false
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_x08pd")

[node name="LeftWallDetector" type="RayCast2D" parent="." unique_id=483422272]
target_position = Vector2(-7, 0)
collision_mask = 5

[node name="RightWallDetector" type="RayCast2D" parent="." unique_id=417649668]
target_position = Vector2(7, 0)
collision_mask = 5

[node name="HitBoxes" type="Node2D" parent="." unique_id=710404979]

[node name="RightSide" type="Area2D" parent="HitBoxes" unique_id=2027735680]
collision_layer = 2
collision_mask = 52

[node name="RightSideBox" type="CollisionShape2D" parent="HitBoxes/RightSide" unique_id=1060715457]
position = Vector2(-5, 0.5)
shape = SubResource("RectangleShape2D_6nm46")
debug_color = Color(0.9993934, 0, 0.12844995, 0.41960785)

[node name="LeftSide" type="Area2D" parent="HitBoxes" unique_id=285743694]
collision_layer = 2
collision_mask = 52

[node name="LeftSideBox" type="CollisionShape2D" parent="HitBoxes/LeftSide" unique_id=1901193722]
position = Vector2(5, 0.5)
shape = SubResource("RectangleShape2D_x08pd")
debug_color = Color(1, 0, 0.12941177, 0.41960785)

[node name="Head" type="Area2D" parent="HitBoxes" unique_id=962399433]
collision_layer = 2
collision_mask = 52

[node name="HeadBox" type="CollisionShape2D" parent="HitBoxes/Head" unique_id=594617273]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_dchgp")
debug_color = Color(1, 0, 0.12941177, 0.41960785)

[node name="Feet" type="Area2D" parent="HitBoxes" unique_id=1891391572]
collision_layer = 2
collision_mask = 52

[node name="FeetBox" type="CollisionShape2D" parent="HitBoxes/Feet" unique_id=1257862884]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_kdgjc")
debug_color = Color(1, 0, 0.12941177, 0.41960785)

[node name="ReloadTimer" type="Timer" parent="." unique_id=1676095527]
one_shot = true

[node name="InvinTimer" type="Timer" parent="." unique_id=38829558]
wait_time = 0.2

[connection signal="area_entered" from="HitBoxes/RightSide" to="." method="_on_right_side_area_entered"]
[connection signal="body_entered" from="HitBoxes/RightSide" to="." method="_on_right_side_body_entered"]
[connection signal="area_entered" from="HitBoxes/LeftSide" to="." method="_on_left_side_area_entered"]
[connection signal="body_entered" from="HitBoxes/LeftSide" to="." method="_on_left_side_body_entered"]
[connection signal="area_entered" from="HitBoxes/Head" to="." method="_on_head_area_entered"]
[connection signal="body_entered" from="HitBoxes/Head" to="." method="_on_head_body_entered"]
[connection signal="area_entered" from="HitBoxes/Feet" to="." method="_on_feet_area_entered"]
[connection signal="body_entered" from="HitBoxes/Feet" to="." method="_on_feet_body_entered"]
[connection signal="body_exited" from="HitBoxes/Feet" to="." method="_on_feet_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="InvinTimer" to="." method="_on_invin_timer_timeout"]
